get rid of the iterators in the mapping package
and clean up a lot of warnings